--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -19,9 +19,9 @@ main:
   - name: Contact
     url: '#contact'
     weight: 60
-  # - name: Posts
-  #   url: 'posts'
-  #   weight: 58
+  - name: Posts
+    url: 'post'
+    weight: 58
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
