--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -20,7 +20,7 @@ main:
     url: '#contact'
     weight: 60
   - name: Posts
-    url: 'post'
+    url: 'posts'
     weight: 58
 
 # Link to a PDF of your resume/CV from the menu.
